--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,50 @@
 
-body {
-  font-family: "Roboto", sans-serif;
-  color: #434455;
-  background-color: #FFF;
+/* Reset */
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
 }
 
 ul, ol {
-  list-style-type: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
   text-decoration: none;
 }
 
+img {
+  display: block;
+}
+
+/* Body */
+body {
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  background-color: #FFF;
+}
+
+/* Container */
+.container {
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* Header */
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .header-logo {
   color: #4D5AE5;
   font-family: "Raleway", sans-serif;
@@ -29,11 +60,8 @@ a {
 }
 
 .nav-list {
-  color: #2E2F42;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  display: flex;
+  gap: 40px;
 }
 
 .nav-link {
@@ -42,6 +70,7 @@ a {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding: 24px 0;
 }
 
 .nav-link:hover,
@@ -70,6 +99,7 @@ a {
 .solutions {
   background-color: #2E2F42;
   text-align: center;
+  padding: 188px 0;
 }
 
 .solutions-title {
@@ -89,7 +119,10 @@ a {
   letter-spacing: 0.04em;
   background: #4D5AE5;
   border: none;
+  border-radius: 4px;
   cursor: pointer;
+  padding: 16px 32px;
+  margin-top: 48px;
 }
 
 .solutions-button:hover,
@@ -99,7 +132,12 @@ a {
 
 /* Advantages */
 .advantages {
-  text-align: center;
+  padding: 120px 0;
+}
+
+.advantages-list {
+  display: flex;
+  gap: 24px;
 }
 
 .advantages-title {
@@ -119,24 +157,42 @@ a {
   letter-spacing: 0.02em;
 }
 
-/* Our Team */
+/* Team */
 .team {
   background: #F4F4FD;
-  text-align: center;
+  padding: 120px 0;
 }
 
 .team-title {
   color: #2E2F42;
+  text-align: center;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
-.team-list li {
+.team-list {
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+}
+
+.team-item {
   background-color: #FFF;
+  flex-basis: calc((100% - 3 * 24px) / 4);
   text-align: center;
+  padding-bottom: 32px;
+  border-radius: 4px;
+  box-shadow: 0 2px 1px rgba(46, 47, 66, 0.08),
+              0 1px 1px rgba(46, 47, 66, 0.16),
+              0 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.team-image {
+  max-width: 100%;
 }
 
 .team-name {
@@ -156,23 +212,38 @@ a {
   letter-spacing: 0.02em;
 }
 
-/* Our Portfolio */
+/* Portfolio */
 .portfolio {
-  text-align: center;
-} 
+  padding: 120px 0;
+}
 
 .portfolio-title {
-color: #2E2F42;
-font-size: 36px;
-font-weight: 700;
-line-height: 1.11;
-letter-spacing: 0.02em;
-text-align: center;
-text-transform: capitalize;
+  color: #2E2F42;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
 }
 
 .portfolio-item {
   background-color: #FFF;
+  flex-basis: calc((100% - 2 * 24px) / 3);
+  text-align: center;
+  border-bottom: 1px solid #E7E9FC;
+}
+
+.portfolio-image {
+  width: 100%;
+  height: auto;
 }
 
 .portfolio-name {
@@ -181,6 +252,7 @@ text-transform: capitalize;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-top: 16px;
 }
 
 .portfolio-category {
@@ -189,12 +261,14 @@ text-transform: capitalize;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 32px;
 }
 
 /* Footer */
 .footer {
   background-color: #2E2F42;
   text-align: center;
+  padding: 100px 0;
 }
 
 .footer-logo {
@@ -217,4 +291,5 @@ text-transform: capitalize;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-top: 16px;
 }
