--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,12 @@ body {
   border-bottom: 1px solid #e7e9fc;
 }
 
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
