--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@ header .container {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
 }
 
 .header-logo-studio {
