--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,9 @@ header .container {
 .header-contacts ul {
   display: flex;
   gap: 40px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .contact-link {
