--- a/css/styles.css
+++ b/css/styles.css
@@ -90,12 +90,12 @@ header .container {
 }
 
 .header-contacts-list {
-display: flex;
-gap: 40px;
-list-style: none;
-margin: 0;
-padding: 0;
-align-content: flex-end;
+  display: flex;
+  gap: 40px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  align-content: flex-end;
 }
 
 .contact-link {
@@ -119,11 +119,16 @@ align-content: flex-end;
 }
 
 .solutions-title {
-  color: #FFF;
+  color: #ffffff;
+  text-align: center;
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 496px;
+  margin-bottom: 48px;
 }
 
 .solutions-button {
