--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,7 @@ header .container {
   cursor: pointer;
   padding: 16px 32px;
   margin-top: 48px;
+  display: block;
 }
 
 .solutions-button:hover,
