--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,7 @@ header .container {
   padding: 16px 32px;
   margin-top: 48px;
   display: block;
+  min-width: 169px;
 }
 
 .solutions-button:hover,
