--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,20 @@ header .container {
 }
 
 /* Advantages */
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .advantages {
   padding: 120px 0;
 }
@@ -171,6 +185,7 @@ header .container {
   letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
+
 
 .advantages-text {
   color: #434455;
