css advantages-item

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,9 @@ header .container {
   margin-bottom: 8px;
 }
 
+.advantages-item {
+  flex-basis: calc((100% - 72px) / 4); /* Віднято три проміжки (24px * 3) */
+}
 
 .advantages-text {
   color: #434455;
