--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,7 @@ header .container {
   flex-basis: calc((100% - 3 * 24px) / 4);
   text-align: center;
   padding-bottom: 32px;
-  border-radius: 4px;
+  border-radius: 0px 0px 4px 4px;
   box-shadow: 0 2px 1px rgba(46, 47, 66, 0.08),
               0 1px 1px rgba(46, 47, 66, 0.16),
               0 1px 6px rgba(46, 47, 66, 0.08);
