--- a/css/styles.css
+++ b/css/styles.css
@@ -199,19 +199,15 @@ header .container {
 
 /* Team */
 .team {
-  background: #F4F4FD;
   padding: 120px 0;
+  background: #F4F4FD;
 }
 
 .team-title {
-  color: #2E2F42;
   text-align: center;
+  margin-bottom: 72px;
   font-size: 36px;
   font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  margin-bottom: 72px;
 }
 
 .team-list {
@@ -221,37 +217,31 @@ header .container {
 }
 
 .team-item {
-  background-color: #FFF;
   flex-basis: calc((100% - 3 * 24px) / 4);
+  background-color: #FFF;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
   text-align: center;
-  padding-bottom: 32px;
-  border-radius: 0px 0px 4px 4px;
-  box-shadow: 0 2px 1px rgba(46, 47, 66, 0.08),
-              0 1px 1px rgba(46, 47, 66, 0.16),
-              0 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .team-image {
-  max-width: 100%;
+  width: 100%;
+  height: auto;
+}
+
+.team-info {
+  padding: 32px 0;
 }
 
 .team-name {
-  color: #2E2F42;
+  margin-bottom: 8px;
   font-size: 20px;
   font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  margin-top: 16px;
-  text-align: center;
-  margin-bottom: 8px;
 }
 
 .team-role {
-  color: #434455;
   font-size: 16px;
   font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
 }
 
 /* Portfolio */
