--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,8 @@ header .container {
   background-color: #FFF;
   flex-basis: calc((100% - 2 * 24px) / 3);
   text-align: center;
-  border-bottom: 1px solid #E7E9FC;
+  border-top: none;
+  padding: 0;
 }
 
 .portfolio-image {
