--- a/css/styles.css
+++ b/css/styles.css
@@ -246,33 +246,31 @@ header .container {
 
 /* Portfolio */
 .portfolio {
-  padding: 120px 0;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .portfolio-title {
-  color: #2E2F42;
   text-align: center;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
   margin-bottom: 72px;
 }
 
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
+  gap: 24px;
+  row-gap: 48px; 
 }
 
 .portfolio-item {
-  background-color: #FFF;
   flex-basis: calc((100% - 2 * 24px) / 3);
   text-align: center;
-  border-top: none;
-  padding: 0;
+  background-color: #FFF;
+  border-top: none; 
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .portfolio-image {
@@ -280,24 +278,22 @@ header .container {
   height: auto;
 }
 
+.portfolio-info {
+  padding: 32px 16px 0; 
+}
+
 .portfolio-name {
-  color: #2E2F42;
   font-size: 20px;
   font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  margin-top: 16px;
-  margin-bottom: 8px;
+  margin-bottom: 8px; 
 }
 
 .portfolio-category {
-  color: #434455;
   font-size: 16px;
   font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  margin-bottom: 32px;
+  color: #434455;
 }
+
 
 /* Footer */
 .footer {
