portf item border

--- a/css/styles.css
+++ b/css/styles.css
@@ -270,7 +270,7 @@ header .container {
   text-align: center;
   background-color: #FFF;
   border-top: none; 
-  border-bottom: 1px solid #e7e9fc;
+  border: 1px solid #e7e9fc;
 }
 
 .portfolio-image {
@@ -279,7 +279,7 @@ header .container {
 }
 
 .portfolio-info {
-  padding: 32px 16px 0; 
+  padding: 32px 16px; 
 }
 
 .portfolio-name {
