footer logo display

--- a/css/styles.css
+++ b/css/styles.css
@@ -310,6 +310,8 @@ header .container {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-logo-studio {
