--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  border: 1px solid #e7e9fc;
+  
 }
 
 /* Header */
@@ -249,6 +249,10 @@ header .container {
 .portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
+}
+
+.portfolio-container {
+  border: 1px solid #e7e9fc;
 }
 
 .portfolio-title {
