--- a/css/styles.css
+++ b/css/styles.css
@@ -252,9 +252,8 @@ header .container {
 }
 
 .portfolio-container {
-  border: 5px solid red;
+  border: 1px solid #e7e9fc;
 }
-
 .portfolio-title {
   text-align: center;
   font-size: 36px;
