--- a/css/styles.css
+++ b/css/styles.css
@@ -251,9 +251,9 @@ header .container {
   padding-bottom: 120px;
 }
 
-.portfolio-container {
+/*.portfolio-container {
   border: 1px solid #e7e9fc;
-}
+}*/
 .portfolio-title {
   text-align: center;
   font-size: 36px;
