--- a/css/styles.css
+++ b/css/styles.css
@@ -247,18 +247,20 @@ header .container {
 
 /* Portfolio */
 .portfolio {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding: 120px 0 120px 0;
 }
 
 /*.portfolio-container {
   border: 1px solid #e7e9fc;
 }*/
 .portfolio-title {
+  color: #2e2f42;
   text-align: center;
   font-size: 36px;
   font-weight: 700;
-  line-height: 1.11;
+  line-height: 1.11; /* 111.111% */
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
   margin-bottom: 72px;
 }
 
@@ -270,10 +272,10 @@ header .container {
 }
 
 .portfolio-item {
-  flex-basis: calc((100% - 2 * 24px) / 3);
-  text-align: center;
+  width: calc((100% - 48px) / 3);
   background-color: #FFF;
-  border: 1px solid #e7e9fc;
+ /* text-align: center;
+  border: 1px solid #e7e9fc;*/
 }
 
 .portfolio-image {
@@ -282,19 +284,26 @@ header .container {
 }
 
 .portfolio-info {
-  padding: 32px 16px; 
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none; 
 }
 
 .portfolio-name {
+  color: #2e2f42;
   font-size: 20px;
   font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
   margin-bottom: 8px; 
 }
 
 .portfolio-category {
+  color: #434455;
   font-size: 16px;
   font-weight: 400;
-  color: #434455;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 
